--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "landlord-tenant-app",
+  "name": "client",
   "version": "1.0.0",
-  "main": "server/index.js",
-  "scripts": {
-    "start": "node server/index.js"
-  },
+  "private": true,
   "dependencies": {
-    "express": "^4.18.2",
-    "path": "^0.12.7"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   }
 }
